<resources>
    <string name="app_name">Buho</string>
    <string name="title_activity_asisstance">AsisstanceActivity</string>

    <!-- Strings used for fragments for navigation -->

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Strings used for Main Activity -->
    <string name="MAMenuInicio">Inicio</string>
    <string name="MAMenuActividades">Actividades</string>
    <string name="MAMenuAsistencia">Asistencia</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Strings used for register activity-->
    <string name="RA_btn_register">Registro</string>
    <string name="RA_first_field_prompt">Nombre</string>
    <string name="RA_second_field_prompt">Correo institucional</string>
    <string name="RA_third_field_prompt">Contraseña</string>
    <string name="RA_fourth_field_prompt">Repetir contraseña</string>


    <!-- Strings used for login activity-->
    <string name="LA_LoginBtn">Iniciar sesión</string>
    <string name="LA_UsernameETHint">Correo institucional</string>
    <string name="LA_PassETHint">Contraseña</string>
    <string name="LA_Title">BuHo</string>
    <string name="LA_dummy_un">Domi</string>
    <string name="LA_dummy_pass">123456</string>

    <!-- Strings used for profile activity-->
    <string name="PA_Title">Información de Perfil</string>
    <string name="PA_NameTV">Nombre</string>
    <string name="PA_EmailTV">Correo</string>
    <string name="PA_PassTV">Contraseña</string>
    <string name="PA_CancelBtn">Cancelar</string>
    <string name="PA_SaveBtn">Guardar</string>

    <!-- Strings used for Home Fragment -->
    <string name="HF_main_title">Mis eventos</string>
    <string name="HF_second_title">Próximos eventos</string>
    <string name="HF_event_date">Fecha: </string>
    <string name="HF_event_schedule">Hora: </string>
    <string name="details_secondary_button_text">No me interesa</string>


    <!-- Dummy info -->

    <string name="HF_dummy_my_events_title1">Concierto grupo Rock</string>
    <string name="HF_dummy_my_events_state1">Proximamente</string>
    <string name="HF_dummy_my_events_classroom1">Tarima de Bienestar Universitario</string>
    <string name="HF_dummy_my_events_schedule1">13:00 – 13:40</string>
    <string name="HF_dummy_my_events_description1">El grupo de Rock de la universidad Icesi te invita a disfrutar del concierto en vivo, no faltes.</string>

    <string name="HF_dummy_my_events_title2">Donatón de plomo</string>
    <string name="HF_dummy_my_events_state2">Pasada</string>
    <string name="HF_dummy_my_events_classroom2">M-102</string>
    <string name="HF_dummy_my_events_schedule2">12:00 – 14:00</string>
    <string name="HF_dummy_my_events_description2">Estudiar en Pance puede ser emocionante, para demostrarlo, te invitamos a esta donatón de plomo patrocinada por The Famous Absurdo en compañía de donadores anónimos. ¡No faltes!</string>

    <string name="HF_dummy_my_events_title3">Los lenguajes del amor</string>
    <string name="HF_dummy_my_events_state3">En curso</string>
    <string name="HF_dummy_my_events_classroom3">D-201</string>
    <string name="HF_dummy_my_events_schedule3">14:00 – 16:00</string>
    <string name="HF_dummy_my_events_description3">Es importante comprender las diferentes formas en las que las dificultades para expresar amor pueden surgir en el día a día, y también las maneras en las que los problemas se resuelven.</string>


    <string name="HF_dummy_next_events_1_header">Integración ramas de la IEEE</string>
    <string name="HF_dummy_next_events_1_body">Las ramas de la IEEE de las universidades de Cali hará una integración para que miembros de distintas universidades tengan la oportunidad de conocer más personas con intereses similares</string>
    <string name="HF_dummy_next_events_1_date">21/10/2022</string>
    <string name="HF_dummy_next_events_1_schedule">11:30 - 15:00</string>

    <string name="HF_dummy_next_events_2_header">Icesi\'s Honored Guest Country USA</string>
    <string name="HF_dummy_next_events_2_body">Con el propósito de ampliar el conocimiento internacional y la perspectiva global de nuestra comunidad universitaria, tendremos semestralmente un “Icesi´s Honored Guest Country”. Este semestre comenzaremos con los Estados Unidos, con lo cual nos uniremos a las celebraciones que se realizan en el marco de los 200 años de relación entre este país y Colombia</string>
    <string name="HF_dummy_next_events_2_date">23/10/2022</string>
    <string name="HF_dummy_next_events_2_schedule">16:00 - 19:30</string>


    <!-- Strings used for Activities Fragment -->
    <string name="AF_main_title">Mis actividades</string>
    <string name="AF_second_title">Actividades recomendadas</string>
    <string name="AF_activity_day">Día: </string>
    <string name="AF_activity_schedule">Hora: </string>

        <!-- Dummy info -->
        <string name="AF_dummy_my_activities_title_1">Trombón</string>
        <string name="AF_dummy_my_activities_classroom_1">I-204</string>
        <string name="AF_dummy_my_activities_day_1">Martes</string>
        <string name="AF_dummy_my_activities_schedule_1">16:00 – 18:00</string>
        <string name="AF_dummy_my_activities_teacher_1">Yeinson Muñoz</string>

        <string name="AF_dummy_my_activities_title_2">Saxofón</string>
        <string name="AF_dummy_my_activities_classroom_2">G-111</string>
        <string name="AF_dummy_my_activities_day_2">Miércoles</string>
        <string name="AF_dummy_my_activities_schedule_2">12:00 – 14:00</string>
        <string name="AF_dummy_my_activities_teacher_2">Julián Andres Henao</string>

        <string name="AF_dummy_my_activities_title_3">Técnica vocal</string>
        <string name="AF_dummy_my_activities_classroom_3">G-116</string>
        <string name="AF_dummy_my_activities_day_3">Viernes</string>
        <string name="AF_dummy_my_activities_schedule_3">12:00 – 15:00</string>
        <string name="AF_dummy_my_activities_teacher_3">Julián Eduardo Vargas</string>

        <string name="AF_dummy_suggested_activities_title_1">Baile</string>
        <string name="AF_dummy_suggested_activities_day_1">Martes</string>
        <string name="AF_dummy_suggested_activities_schedule_1">12:00-14:00</string>

        <string name="AF_dummy_suggested_activities_title_2">Bajo eléctrico</string>
        <string name="AF_dummy_suggested_activities_day_2">Miércoles</string>
        <string name="AF_dummy_suggested_activities_schedule_2">10:00-12:00</string>

        <string name="AF_dummy_suggested_activities_title_3">Piano</string>
        <string name="AF_dummy_suggested_activities_day_3">Miércoles</string>
        <string name="AF_dummy_suggested_activities_schedule_3">11:00-13:00</string>

        <string name="AF_dummy_suggested_activities_title_4">Batería</string>
        <string name="AF_dummy_suggested_activities_day_4">Jueves</string>
        <string name="AF_dummy_suggested_activities_schedule_4">14:00-17:00</string>

        <string name="AF_dummy_suggested_activities_title_5">Ilustración</string>
        <string name="AF_dummy_suggested_activities_day_5">Viernes</string>
        <string name="AF_dummy_suggested_activities_schedule_5">15:00-17:00</string>

        <string name="AF_dummy_suggested_activities_title_6">Arte en madera</string>
        <string name="AF_dummy_suggested_activities_day_6">Sábado</string>
        <string name="AF_dummy_suggested_activities_schedule_6">11:00-14:00</string>


    <!-- Strings used for Assistance Fragment -->
    <string name="SF_main_btn">Asistir</string>
    <string name="SF_tv_header_1">Actividad / Evento</string>
    <string name="SF_tv_header_2">Fecha</string>

    <string name="SF_tv_dummy_1A">Trombón</string>
    <string name="SF_tv_dummy_1B">10/09/2022</string>

    <string name="SF_tv_dummy_2A">Trombón</string>
    <string name="SF_tv_dummy_2B">03/09/2022</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="Password">Repetir contraseña</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must have more than 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Register" >Register</string>
    <string name="icon_description">Buho placeholder icon</string>
    <string name="MAC_speaker_type">"Profesor: "</string>
    <string name="MAC_button_text">Estoy aquí</string>
    <string name="MEC_speaker_type">"Ponente: "</string>
    <string name="AF_speaker_type">"Profesor: "</string>
    <string name="AF_main_button_text">Seguir evento</string>
    <string name="AS_title">Mis Asistencias</string>
</resources>