<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/card_container_width"
    android:layout_height="@dimen/card_container_height">


    <androidx.cardview.widget.CardView
        android:id="@+id/HC_cd_a"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:elevation="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:cardBackgroundColor="@color/btn_secondary"
        app:cardCornerRadius="6dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/HC_cl_a"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:id="@+id/MEC_tittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:text="@string/HF_dummy_my_events_title1"
                android:textColor="@color/main_text_color"
                android:textSize="14sp"
                android:typeface="sans"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/MEC_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="12dp"
                android:text="@string/HF_dummy_my_events_state1"
                android:textColor="@color/main_text_color"
                android:textSize="14sp"
                android:typeface="sans"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/MEC_classroom"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:text="@string/HF_dummy_my_events_classroom1"
                android:textColor="@color/secondary_text_color"
                android:textSize="12sp"
                android:typeface="sans"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/MEC_tittle" />

            <TextView
                android:id="@+id/MEC_schedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="12dp"
                android:text="@string/HF_dummy_my_events_schedule1"
                android:textColor="@color/secondary_text_color"
                android:textSize="12sp"
                android:typeface="sans"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/MEC_state" />

            <TextView
                android:id="@+id/MEC_description"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="8dp"
                android:text="@string/HF_dummy_my_events_description1"
                android:textAlignment="viewStart"
                android:textColor="@color/secondary_text_color"
                android:textSize="11sp"
                android:typeface="sans"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/MEC_separator"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="50dp"
                android:background="@color/panel_separator"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>